# LocalBird

./: .gitignore  front.html  imagerepository.py  localbirddatas.py  metarepository.py  postimporter.py  pyproject.toml  server.py  xpostinfo2lbdata.py
XPostInfoSaver/: common.js  manifest.json  style.css
templates/: index.html
templates/.ipynb_checkpoints/: index-checkpoint.html
