[project]
name = "localbird"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=25.0.1",
    "jupyterlab>=4.5.3",
    "pillow>=12.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "gunicorn>=25.0.1",
]
